🔧 fix text align

--- a/src/scss/sections/blog-entry-page.scss
+++ b/src/scss/sections/blog-entry-page.scss
@@ -17,6 +17,7 @@
     font-size: 18px;
     line-height: 1.65;
     margin-bottom: 28px;
+    text-align: justify;
   }
   img {
     width: 100%;
